[tool.poetry]
name = "managing-long-running-tasks-with-fastapi-and-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Diwash Bhandari <diwasb54@gmail.com>"]
readme = "README.md"
packages = [{include = "managing-long-running-tasks-with-fastapi-and-rabbitmq"}]

[tool.poetry.dependencies]
python = "^3.11"
propan = {extras = ["async-rabbit"], version = "^0.1.5.24"}
fastapi = {extras = ["all"], version = "^0.103.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
